--- a/frontend.kv
+++ b/frontend.kv
@@ -1,34 +1,48 @@
 <CameraScreen>:
     GridLayout:
         cols:1
+        padding:10
+        spacing:10
         Camera:
             id:camera
             resolution:(640,480)
             play: False
+            size_hint_y:0.8
         Button:
             id:camera_button
             text:'Start Camera'
             on_press:root.start() if root.ids.camera.play==False else root.stop()
+            size_hint_y:0.1
         Button:
             text:'Capture'
             on_press:root.capture()
+            size_hint_y:0.1
 
 <ImageScreen>:
     GridLayout:
         cols:1
+        padding:10
+        spacing:10
         Image:
             id:img
+            size_hint_y:0.7
         Button:
             on_press:root.create_link()
             text:'Create Sharable Link'
+            size_hint_y:0.1
         Label:
+            id:link
             text:''
+            size_hint_y:0.1
         GridLayout:
+            size_hint_y:0.1
             cols:2
             Button:
                 text:'Copy Link'
+                on_press:root.copy_link()
             Button:
                 text:'Open Link'
+                on_press:root.open_link()
 
 
 <RootWidget>:
